<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:fillViewport="true"

    tools:context=".Authorization.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/posi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Create Your Account"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- NAME -->
        <EditText
            android:id="@+id/sign_name"
            android:hint="Name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edittext"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- EMAIL -->
        <EditText
            android:id="@+id/sign_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"

            android:background="@drawable/edittext"
            android:hint="@string/login_hint1"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/sign_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- PASSWORD -->
        <EditText
            android:id="@+id/sign_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext"
            android:hint="@string/login_hint2"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/sign_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp" />

        <!-- PHONE -->
        <EditText
            android:id="@+id/sign_phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext"
            android:hint="Phone (optional)"
            android:inputType="phone"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/sign_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp" />

        <!-- BUTTON -->
        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="17sp"
            app:cornerRadius="56dp"
            app:layout_constraintTop_toBottomOf="@id/sign_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp" />

        <ProgressBar
            android:id="@+id/signup_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
