...
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/white"
    tools:context=".EntrantView.EntrantHomePageActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/entrant_home_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabGravity="fill"
...
